fixed Collapse's bugs + About's page + footer

--- a/src/components/Collapse/Collapse.module.css
+++ b/src/components/Collapse/Collapse.module.css
@@ -1,39 +1,50 @@
-.container {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    margin: 20px 0;
+.containerDropdown {
+    width: 100%;
+    min-width: 260px;
+    height: fit-content;
+    margin: 0 auto;
+    background-color: var(--tertiary);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+
 }
 
 .button {
+    background-color: var(--secondary);
+    height: 47px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 50px;
-    font-size: 22px;
-    padding: 0 20px;
-    background-color: #ff6060;
-    color: #fff;
-    cursor: pointer;
-    border: none;
-    border-radius: 10px;
-    z-index: 2;
+    font-size: 18px;
+    /* font-weight: bold; */
+    color: var(--primary);
+    padding: 0 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
-.text {
-    background-color: #f6f6f6;
+.description {
+    background-color: var(--tertiary);
     color: #ff6060;
     font-size: 18px;
-    padding: 30px;
-    border-radius: 10px 10px 5px 5px;
-    position: relative;
-    line-height: 30px;
+    padding: 15px;
     bottom: 5px;
-    z-index: 1;
+    list-style-position: inside;
+    list-style-type: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
-.rotateOpen {
+/* .rotateOpen {
     transform: rotate(180deg);
     transition: transform 0.3s ease; 
 }
@@ -41,11 +52,9 @@
 .rotateClose {
     transform: rotate(0deg);
     transition: transform 0.3s ease; 
-}
+} */
 
-.close {
-    display: none;
-}
+
 
 @media screen and (max-width: 768px) {
     .container {
