--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,15 +1,18 @@
 .footer {
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
+    
     width: 100%;
     max-width: 1440px;
     background: var(--bgFooter);
     padding: 32px;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
     gap: 20px;
     text-align: center;
     font-size: 24px;
-    margin-top: 32px;
 }
 
 .footer svg {
