--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -19,8 +19,8 @@
 
 html, body, #root {
     width: 100%;
-    height: 100%;
-}
+    height: 100%;}
+
 
 .container {
     width: 100%;
@@ -34,8 +34,8 @@ main {
     max-width: 1440px;
     min-width: 280px;
     margin: 0 auto;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     padding: 0 10px;
 }
+
