--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,24 @@
+html {
+  height: 100%;
+}
 body {
   margin: 0;
+  padding: 0;
+  font-weight: normal;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+  display: flex;
+  flex-direction: column;
+}
+
+  img {
+    max-width: 100%;
+    height: auto;
+
 }
 
 code {
