--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,9 +1,11 @@
-/* .containerDropdown {
+
+
+.about {
     width: 80%;
     min-width: 260px;
-    margin: 32px auto;
+    margin: 15px auto;
     padding: 32px 0;
     display: flex;
     flex-direction: column;
     gap: 32px;
-} */
+}
